# telegram_bot

./: .env.example  .gitignore  HELP.md  README.md  bot.py  config.py  deepseek.py  pyproject.toml  requirements.txt  schedule_message.py
config/: Config.yaml  config-dev.yaml
database/: db_manager.py  models.py
services/: bot_service.py  message_service.py  notification_service.py  user_service.py
test/: bak.py
